--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
-    <h1>Destructuring  </h1>
+    <!-- <script src="script.js"></script> -->
+    <h1> Javascript  </h1>
+    <!-- <script src="secondLargest.js"></script> -->
+    <!-- <script src="loops.js"></script> -->
+    <script src="function.js"></script>
     
 </body>
 </html>
