--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="boxslide.css">
 </head>
 <body>
     <!-- <script src="script.js"></script> -->
     <h1> Javascript  </h1>
     <!-- <script src="secondLargest.js"></script> -->
     <!-- <script src="loops.js"></script> -->
-    <script src="function.js"></script>
+    <!-- <script src="chaiOrCode.js"></script> -->
+    <div class="box">
+        
+    </div>
+    <!-- <script src="boxslide.js"></script> -->
+    <script src="script.js"></script>
     
 </body>
 </html>
