--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         
     </div>
     <!-- <script src="boxslide.js"></script> -->
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+
+    <input type="text" placeholder="enter something">
+    <script src="onchange.js"></script>
     
 </body>
 </html>
