--- a/rotate.html
+++ b/rotate.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,33 +9,7 @@
     <h1>Rotate a matrix</h1>
 
 
-    <script>
-
-        let arr = [
-            [1,2,3],
-            [4,5,6],
-            [7,8,9]
-        ]
-
-//expected output
-
-//          let result =  [
-//      [7,4,1],
-//      [8,5,2],
-//      [9,6,3],
-//   ]
-
-
-let result = [];
-console.log(result)
-
-
-for(let i=0; i<arr.length; i++){
-    for(let )
-}
-
-
-    </script>
+    <script src="rotate.js"></script>
     
 </body>
-</html> -->
+</html>
