update fe files

--- a/vikas.html
+++ b/vikas.html
@@ -12,13 +12,13 @@
     <script>
       // let h1 = document.querySelector("h1");
 
-      // let obj = {
-      //     uname:"vikas",
-      //     age:21,
-      //     email:"vikas@gmail.com"
-      // }
+      let obj = {
+          uname:"vikas",
+          age:21,
+          email:"vikas@gmail.com"
+      }
 
-      // // document.write({obj})
+      // document.write({obj})
       // console.log(obj)
       /*
        for(let key  in  obj)
@@ -37,15 +37,96 @@
     //   1;
 
 
-       for(let i=0; i<5; i--)
-       {
-        for(let j=5; j>0; j--)
-        {
-            // console.log(i)
-            document.write(j + " ");
-        }
-        document.write("<br>")
-       }
+      //  for(let i=0; i<5; i--)
+      //  {
+      //   for(let j=5; j>0; j--)
+      //   {
+      //       // console.log(i)
+      //       document.write(j + " ");
+      //   }
+      //   document.write("<br>")
+      //  }
+
+      // console.log("working")
+
+
+//       let arr = [
+//         [1,2,3],
+//         [4,5,6],
+//         [7,8,9]
+//       ]
+
+//       let result = []
+//       console.log(result)
+
+// for(let i=0; i<arr[0].length; i++)
+// {
+// let newrow = [];
+// for(let j=arr.length-1; j>=0; j--)
+// {
+//   newrow.push(arr[j][i])
+// }
+// result.push(newrow)
+// }
+
+// let result = [];
+// for(let i=0; i<arr.length; i++)
+// {
+//   let newrow = []
+//   for(j= arr.length-1; j>=0; j--){
+//     newrow.push([j][i])
+//   }
+//   result.push(newrow);
+// }
+// console.log(result)
+
+
+
+// 1 
+// 1 2 
+// 1 2 3 
+// 1 2 3 4 
+// 1 2 3 4 5 
+
+// let output = []
+
+//  for(let i=1; i<=5; i++){
+//   for(let j=1;j<=i;j++){
+//     // document.write(j);
+//     console.log(j)
+//   }
+//   // document.write("<br>")
+//   console.log('\n')
+//  }
+
+
+
+//  let user = {
+//   fname: "vikas",
+//   lname:"tomar",
+//   address:{
+//     state:"up",
+//     city:"mathura"
+//   }
+  
+//  }
+//  let a = user.address.city = "jaipur";
+// let user2=user;
+
+// let user3={...user}
+
+// let user3={};
+// for(let i in user){
+//   let b=user[i];
+//   user3[i] =b;
+// }
+// console.log(user3);
+
+//  console.log(user3)
+ 
+// <!-- for(let i=0; i<5; i++){
+//   for(let j=5; j>)
+// } -->
 
 
 
