--- a/filter.html
+++ b/filter.html
@@ -1,18 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+ </head>
+ <h1>
+   JS PRACTICE QUES
+ </h1>
+ <body>
     <script>
+      //   const users = [
+      //       {fname: "ram",lname:"sharma", age: 40},
+      //       {fname: "seeta",lname:"sharma", age: 29},
+      //       {fname: "deepika",lname:"sharma", age:20}
+      //   ]
 
-
-let numbers = [12,18,37,23,44]
-let filteredVal = numbers.filter(number => number > 37)
-console.log(filteredVal)
+        // let result = users.filter((n) => n.age < 30).map((n)=> n.fname)
+        // let result = users.reduce((n)=> n.age < 30)
+      //   let nums = [1,2,3,4,5,5]
+      //    let result = nums.reduce((acc,curr)=>
+      //    {
+      //       return     acc + curr;
+            
+      //    })
+      //   console.log(result)
+   
+  
     </script>
     
-</body
-</html>
+ </body>
+ </html>
