--- a/ternory.html
+++ b/ternory.html
@@ -19,6 +19,17 @@
     // let output = (age<18) ? 'yes' : 'no'
     // console.log(output)
 
+
+//     let numbers = [23,22,12,45,44,90]
+//     let evenNum = numbers.filter(n=>{
+//          return n%2 == 0 
+//     })
+// console.log(evenNum)
+
+
+
+console.log("Program 1")
+
     </script>
     
 </body>
