added counter functionality in js

--- a/ternory.html
+++ b/ternory.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<h1>reverse num</h1>
 <body>
     <script>
 
@@ -28,7 +29,15 @@
 
 
 
-console.log("Program 1")
+// console.log("Program 1")
+
+ function reversekaro(num)
+ {
+    num.toString().split("").join("")
+
+
+ }
+ reversekaro(12)
 
     </script>
     
