--- a/code3.html
+++ b/code3.html
@@ -25,7 +25,7 @@
 <body>
     <div id="box">
         <!-- <h1>Lorem ipsum dolor sit amet.</h1> -->
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, delectus.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicbbging elit. Repudiandae, delectus.</p>
         <button onclick="hide()">Remove</button>
         <br>
         <button onclick="show()">Show</button>
